Added reference to the original style

--- a/theme.cfg
+++ b/theme.cfg
@@ -1,9 +1,9 @@
 ########################################################################
+# AB's "PerfectDay" fluxbox style, based on:                           #
 # ArchGh0ul's "ArchBlu" Fluxbox Style                                  #
-# Modify and use as you please. Copy the "ArchBlu" folder to           #
+# Modify and use as you please. Copy the "PerfectDay" folder to        #
 # /home/<user>/.fluxbox/styles/ and select it in the User Styles menu  #
-# This uses the Terminus font. If you don't have it just edit below    #
-# and make it use fixed or sans or whatever.                           #
+# This uses the Tahoma font. If you don't have it just edit below.     #
 # An editable GIMP project of the gfx is included. Enjoy!              #
 ########################################################################
 
